<resources>
    <string name="app_name">QuizGame</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="quiz">Quiz</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="questions_amount">Questions amount:</string>
    <string name="category">Category:</string>
    <string name="difficulty">Difficulty:</string>
    <string name="start">Start</string>
    <string name="todo">TODO</string>
    <string name="_10">10</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="result">Result</string>
    <string name="category_mixed">Category: Mixed</string>
    <string name="correct_answers">Correct answers:</string>
    <string name="result_">Result:</string>
    <string name="all">All</string>
    <string name="finish">Finish</string>
    <string name="geography">Geography</string>
    <string name="colombo">Colombo</string>
    <string name="moratuwa">Moratuwa</string>
    <string name="share_this_app">Share this app</string>
    <string name="rate_us">Rate us</string>
    <string name="leave_feedback">Leave feedback</string>
    <string name="clear_history">Clear history</string>
    <string name="_14_march_2023_20_30">14 March 2023 20:30</string>
    <string name="True">True</string>
    <string name="False">False</string>
    <string name="skip">skip</string>
    <string name="_1_10">1/10</string>
    <string name="negombo">Negombo</string>
</resources>