<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.home.HomeFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ImageView
        android:id="@+id/illustrations"
        android:layout_width="70dp"
        android:layout_height="85dp"
        android:src="@drawable/illustration"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:contentDescription="@string/todo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_questions_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questions_amount"
        android:layout_below="@id/illustrations"
        android:layout_marginTop="44dp"
        android:textColor="#A9A9A9"
        android:layout_marginStart="56dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_10"
        android:layout_below="@id/illustrations"
        android:layout_marginTop="44dp"
        android:layout_toEndOf="@id/tv_questions_amount"/>

    <com.google.android.material.slider.Slider
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_questions_amount"
        android:layout_marginStart="42dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:stepSize="1"
        android:value="5"
        android:valueFrom="1"
        android:valueTo="10"
        app:trackColorInactive="#898121"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:layout_below="@id/slider"
        android:layout_marginStart="56dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_category"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="64dp"
        android:background="@color/white"
        app:cardCornerRadius="8dp"
        android:layout_marginTop="8dp">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="48dp"/>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/difficulty"
        android:layout_below="@id/cardView"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewDifficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_difficulty"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="64dp"
        android:background="@color/white"
        app:cardCornerRadius="8dp"
        android:layout_marginTop="8dp">

        <Spinner
            android:id="@+id/spinnerDifficulty"
            android:layout_width="match_parent"
            android:layout_height="48dp"/>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardViewDifficulty"
        android:layout_marginTop="36dp"
        android:text="@string/start"
        android:paddingHorizontal="106dp"
        android:backgroundTint="@color/nav_color"
        android:textColor="@color/white"
        android:background="@drawable/bg_button"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>