<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.result.FragmentResult"
    android:padding="16dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:layout_centerHorizontal="true"
        android:textColor="#1A051D"
        android:textSize="18sp"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="16dp"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/chekmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/chekmark"
        android:layout_below="@id/tv_result"
        android:layout_marginTop="76dp"
        android:layout_centerHorizontal="true"
        android:tint="@color/purple_200"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardResult"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/chekmark"
        app:cardCornerRadius="18dp"
        android:layout_marginTop="36dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_mixed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="#1F2041"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-black"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="70dp"
                android:orientation="horizontal"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/difficulty"
                android:fontFamily="sans-serif-medium"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="55sp"
                    android:layout_marginEnd="35sp"
                    android:layout_weight="2"
                    android:text="@string/correct_answers"
                    android:fontFamily="sans-serif-medium"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/result_"
                    android:fontFamily="sans-serif-medium"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:orientation="horizontal"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_difficulty_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all"
                    android:layout_marginStart="13dp"
                    android:fontFamily="sans-serif-black"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_correct_answer_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="115sp"
                    android:layout_marginEnd="55sp"
                    android:gravity="center_horizontal"
                    android:fontFamily="sans-serif-black"
                    tools:text="8/10" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_result_mixed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:fontFamily="sans-serif-black"
                    tools:text="80%" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardResult"
        android:backgroundTint="@color/purple_200"
        android:text="@string/finish"
        android:background="@drawable/bg_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:textColor="@color/white"
        android:paddingHorizontal="96dp"/>

</RelativeLayout>