<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.game.FragmentGame">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_geography"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/geography"
        android:fontFamily="sans-serif-medium"
        android:textColor="#000000"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        tools:ignore="RelativeOverlap" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ic_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:layout_toStartOf="@id/tv_geography"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"/>

    <ProgressBar
        android:id="@+id/slider_count"
        android:layout_width="wrap_content"
        android:layout_height="8dp"
        android:layout_below="@+id/tv_geography"
        android:layout_marginStart="100dp"
        android:layout_marginTop="32dp"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="100dp" />

    <TextView
        android:id="@+id/tv_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1_10"
        android:textStyle="bold"
        android:layout_below="@+id/slider_count"
        android:layout_marginStart="190dp"
        android:layout_marginTop="10dp"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="81sp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="81sp"
        android:fontFamily="sans-serif-medium"
        android:textColor="#1A051D"
        android:textSize="22sp"
        tools:text="What is the largest city and commercial capital of Sri Lanka?"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_question"
        android:layout_marginTop="36dp"
        android:text="@string/colombo"
        android:textAllCaps="false"
        android:paddingHorizontal="120dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#C27664"
        android:textColor="@color/white"
        android:background="@drawable/bg_button"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_first"
        android:layout_marginTop="8dp"
        android:text="@string/moratuwa"
        android:textAllCaps="false"
        android:paddingHorizontal="120dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#B05A7A"
        android:textColor="@color/white"
        android:background="@drawable/bg_button"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_third"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_second"
        android:layout_marginTop="8dp"
        android:text="@string/negombo"
        android:textAllCaps="false"
        android:paddingHorizontal="120dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#E4C988"
        android:textColor="@color/white"
        android:background="@drawable/bg_button"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_fourth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_third"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="120dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_btn_fourth"
        android:textAllCaps="false"
        android:textColor="#6979F8"
        tools:text="Colombo" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_fourth"
        android:layout_marginTop="96dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_skip"
        android:textAllCaps="false"
        android:paddingHorizontal="46dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16sp"
        tools:text="Skip"/>

</RelativeLayout>