<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.settings.SettingsFragment">

    <include
        android:id="@+id/toolBarSettings"
        layout="@layout/toolbarsettings"/>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/purple_200"
        android:layout_below="@id/toolBarSettings"
        android:layout_marginTop="12dp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearShare"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/view">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_this_app"
            android:textSize="18sp"
            android:textColor="#333333"
            android:fontFamily="sans-serif-medium"
            android:layout_marginStart="18dp"
            android:layout_marginTop="16dp"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_forward"
            android:layout_marginTop="18dp"
            android:layout_marginStart="215dp"
            android:tint="@color/purple_200"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/purple_200"
        android:layout_below="@id/linearShare"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearRate"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/linearShare">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_us"
            android:textSize="18sp"
            android:textColor="#333333"
            android:fontFamily="sans-serif-medium"
            android:layout_marginStart="18dp"
            android:layout_marginTop="16dp"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_forward"
            android:layout_marginTop="18dp"
            android:layout_marginStart="270dp"
            android:tint="@color/purple_200"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/purple_200"
        android:layout_below="@id/linearRate"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearFeed"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/linearRate">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leave_feedback"
            android:textSize="18sp"
            android:textColor="#333333"
            android:fontFamily="sans-serif-medium"
            android:layout_marginStart="18dp"
            android:layout_marginTop="16dp"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_forward"
            android:layout_marginTop="18dp"
            android:layout_marginStart="205dp"
            android:tint="@color/purple_200"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/purple_200"
        android:layout_below="@id/linearFeed"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearClear"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/linearFeed">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_clear_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_history"
            android:textSize="18sp"
            android:textColor="#333333"
            android:fontFamily="sans-serif-medium"
            android:layout_marginStart="18dp"
            android:layout_marginTop="16dp"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_forward"
            android:layout_marginTop="18dp"
            android:layout_marginStart="225dp"
            android:tint="@color/purple_200"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/purple_200"
        android:layout_below="@id/linearClear"/>
</RelativeLayout>